<resources>
    <string name="app_name">LearningVerbs</string>

    <!-- Strings para la pantalla de create account-->
    <string name="title">Crear cuenta</string>
    <string name="textButton">Ingresar con email</string>
    <string name="textButtonWithFacebook">Facebook</string>
    <string name="textButtonWithGoogle">Google</string>
    <string name="textButtonWhitTwitter">Twitter</string>

    <string name="textSeparator">ó</string>

    <!-- Strings para la pantalla de login-->
    <string name="tittle_login">INICIAR SESIÓN</string>
    <string name="hint_edit_email">correo</string>
    <string name="hint_edit_password">contraseña</string>
    <string name="text_check_box">Recordar usuario</string>
    <string name="btn_start_sesion">Iniciar sesión</string>
    <string name="btn_forgot_password">Olvidé mi contraseña</string>
    <string name="lbl_email">Ingresa correo electrónico</string>

    <!-- Strings para la pantalla de signUp-->
    <string name="tittle_sign_up">CREAR CUENTA</string>
    <string name="hint_edit_verify_password">verificar contraseña</string>
    <string name="msg_verify_password">La contraseña no coincide</string>
    <string name="msg_add_password">La contraseña tiene que ser mayor a 6 digitos</string>
    <string name="msg_email_not_valid">Email no valido</string>

    <!-- Strings para la pantalla de forgot password-->
    <string name="tittle_get_password">Recupera tu constraseña </string>
    <string name="msg_get_password">Introduce el correo electrónico con el que iniciaste sesión y enviaremos un enlace para que puedas cambiar tu contraseña y puedas recuperar tu cuenta</string>
    <string name="btn_get_password">Enviar </string>
    <string name="msg_error">Correo no valido </string>
    <string name="msg_email_send">Correo enviado</string>
    <string name="msg_no_email_send">No se envio el correo</string>


    <!-- Strings para la pantalla del home-->
    <string name="title_home">Inicio</string>
    <string name="title_list_verbs">Verbos</string>
    <string name="title_favorites">Favoritos</string>
    <!-- Strings para la pantalla de verb list-->
    <string name="edit_search">Buscar</string>
    <string name="txt_verb_name">Verbo</string>

    <!-- Strings para los botones de los verbos en el home-->
    <string name="btn_title">Verbo   del día</string>
    <string name="btn_title_to_be">Verbo To Be</string>
    <string name="btn_title_have">Verbo Have</string>
    <string name="btn_title_do">Verbo Do</string>

    <!-- Strings para el layout de user detail-->
    <string name="btn_close_sesion">Cerrar sesión</string>
    <string name="title_user">Usuario</string>
    <string name="msg_image_updated">Imagen actualizada</string>

    <!--Strings para la pantalla del detalle del verbo -->
    <string name="msg_verb_spanish">Verbo en Español</string>
    <string name="msg_verb_english">Verbo en Ingles</string>
    <string name="verb_spanish">Verbo</string>
    <string name="verb_english">Verb</string>
    <string name="card_title_affirmative">Afirmativo</string>
    <string name="card_title_negative">Negativo</string>
    <string name="card_title_question">Pregunta</string>
    <string name="msg_regular">Regular</string>
    <string name="msg_irregular">Irregular</string>
    <string name="title_pager_present">Presente</string>
    <string name="title_pager_past">Pasado</string>
    <string name="title_pager_future">Futuro</string>



    <!-- Strings para los dialogos-->
    <string name="title_dialog">Cerrar sesión</string>
    <string name="msg_dialog">¿Desea cerrar la sesión?</string>
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_regular">Regulares</string>
    <string name="btn_irregular">Irregulares</string>
    <string name="title_dialog_take_photo">Selecciona una foto</string>
    <string name="btn_take_photo">Toma una foto</string>
    <string name="btn_open_galeri">Abre tu galeria</string>
    <string name="msg_loading">Cargando</string>

    <string name="msg_list_empty">No tienes favoritos.</string>
    <string name="msg_no_results_found">No se encontraron resultados.</string>

    <string name="msg_throwable">Error al consultar el elemento.</string>


</resources>