<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".view.profile.CreateAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/CoordinatorLayout_container_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:paddingStart="@dimen/normal_margin"
        android:paddingEnd="@dimen/normal_margin"
        tools:context=".view.profile.CreateAccountActivity">


        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/card_layout_width"
            android:layout_height="@dimen/card_layout_height"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:backgroundTint="@color/teal_700"
            app:cardCornerRadius="@dimen/title"
            app:cardElevation="@dimen/elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_loging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normal_margin"
                    android:fontFamily="serif-monospace"
                    android:text="@string/tittle_login"
                    android:textColor="@color/purple_700"
                    android:textSize="@dimen/medium_word"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/little_padding"
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:background="@drawable/esquina_redondeada_edit_text_login"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/hint_edit_email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/padding"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_loging" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/little_padding"
                    android:layout_margin="@dimen/normal_margin"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:background="@drawable/esquina_redondeada_edit_text_login"
                    android:fontFamily="serif-monospace"
                    android:hint="@string/hint_edit_password"
                    android:inputType="textPassword"
                    android:padding="@dimen/padding"
                    android:textColor="@color/purple_500"
                    android:textColorHint="@color/purple_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

                <CheckBox
                    android:id="@+id/checkBoxRememberUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_margin"
                    android:buttonTint="@color/purple_700"
                    android:fontFamily="serif-monospace"
                    android:text="@string/text_check_box"
                    android:textColor="@color/purple_500"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normal_margin"
                    android:background="@drawable/btn_login_with_facebook"
                    android:fontFamily="casual"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/btn_start_sesion"
                    android:textColor="@color/teal_800"
                    android:textSize="@dimen/little_word"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxRememberUser" />

                <Button
                    android:id="@+id/btnForgotPassword"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_margin"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="serif-monospace"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/purple_200"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
