<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".view.CreateAccountActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:paddingStart="@dimen/normal_margin"
        android:paddingEnd="@dimen/normal_margin"
        tools:context=".view.CreateAccountActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:padding="@dimen/little_padding"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="@dimen/padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_login"
                android:layout_width="@dimen/size_image"
                android:layout_height="@dimen/size_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_create_account" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreateAcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@drawable/btn_create_account"
            android:fontFamily="serif-monospace"
            android:foreground="?selectableItemBackground"
            android:padding="10dp"
            android:text="@string/title"
            android:textAllCaps="false"
            android:textColor="@color/teal_800"
            android:textSize="@dimen/medium_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:background="@color/teal_800"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toStartOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_word"
            android:fontFamily="serif-monospace"
            android:text="@string/textSeparator"
            android:textColor="@color/teal_800"
            android:textSize="@dimen/normal_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCreateAcount" />

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:background="@color/teal_800"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@drawable/btn_login"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/textButton"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/normal_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginWithFacebook"
            style="@style/AppTheme.ButtonGeneral"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@drawable/btn_login_with_facebook"
            android:paddingStart="@dimen/normal_margin"
            android:paddingEnd="@dimen/normal_margin"
            android:text="@string/textButtonWithFacebook"
            app:drawableLeftCompat="@drawable/ic_vector_facebook_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginWithGoogle"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:background="@drawable/btn_login_with_facebook"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingStart="@dimen/normal_margin"
            android:paddingEnd="@dimen/normal_margin"
            android:text="@string/textButtonWithGoogle"
            android:textColor="@color/teal_800"
            android:textSize="@dimen/normal_word"
            app:drawableLeftCompat="@drawable/ic_vector_google_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginWithFacebook" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLoginWithTwitter"
            android:layout_width="@dimen/layout_width_button"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@drawable/btn_login_with_facebook"
            android:fontFamily="casual"
            android:gravity="center"
            android:paddingStart="@dimen/normal_margin"
            android:paddingEnd="@dimen/normal_margin"
            android:text="@string/textButtonWhitTwitter"
            android:textColor="@color/teal_800"
            android:textSize="@dimen/normal_word"
            app:drawableLeftCompat="@drawable/ic_vector_twitter_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginWithGoogle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>