<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".signup.view.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        tools:context=".forgotpassword.view.GetPasswordActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:background="@drawable/txt_sign_up"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:padding="@dimen/padding"
            android:text="@string/tittle_get_password"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/normal_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:padding="@dimen/little_padding"
            app:cardBackgroundColor="@color/teal_200"
            app:cardCornerRadius="@dimen/padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_get_password"
                android:layout_width="@dimen/size_image_get_password"
                android:layout_height="@dimen/size_image_get_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/undraw_forgot_password_re_hxwm" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/msg_get_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/msg_get_password"
            android:textColor="@color/teal_700"
            android:textSize="@dimen/normal_word"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/little_padding"
            android:layout_margin="@dimen/normal_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:background="@drawable/esquina_redondeada_edit_text_sign_up"
            android:fontFamily="serif-monospace"
            android:hint="@string/hint_edit_email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding"
            android:textColor="@color/teal_800"
            android:textColorHint="@color/teal_800"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/msg_get_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_margin"
            android:background="@drawable/btn_login_with_facebook"
            android:fontFamily="casual"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/btn_get_password"
            android:textColor="@color/teal_800"
            android:textSize="@dimen/little_word"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
